--- a/remote-clover-loyalty/src/main/res/layout/activity_custom_loyalty.xml
+++ b/remote-clover-loyalty/src/main/res/layout/activity_custom_loyalty.xml
@@ -20,6 +20,12 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+            <Button android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/forceStopButton"
+                    android:visibility="gone"
+                    android:text="Force Stop"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:gravity="left"
